--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build:circuits:compile": "chmod u+x scripts/compile-circuit.sh && ./scripts/compile-circuit.sh",
     "build:contracts:compile": "npx hardhat compile",
     "fix:circuits:contracts": "node scripts/bump-solidity.ts",
-    "circuits": "npm run build:circuits:compile && npm run fix:circuits:contracts"
+    "circuits": "npm run build:circuits:compile && npm run fix:circuits:contracts",
+    "export:zkeys": "cp circuits/circuit_final.zkey web/zkeys && cp circuits/verification_key.json web/zkeys && cp circuits/circuit_js/circuit.wasm web/zkeys && cp circuits/circuit_js/witness_calculator.js web/src",
+    "export:types": "cp -r typechain frontend/contracts"
   },
   "repository": {
     "type": "git",
