--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "url": "https://github.com/sleepyqadir/ZKPT-Core/issues"
   },
   "dependencies": {
+    "@aave/core-v3": "^1.13.1",
     "@openzeppelin/contracts": "^4.6.0",
     "axios": "^0.27.2",
     "circomlib": "^2.0.3",
